# baby-reasoning

./: LICENSE  do_eval.sh  preview_prompts.py  pyproject.toml
.claude/prove_it/: config.json
baby_reasoning/: __init__.py  cli.py  model.py  runner.py
baby_reasoning/tasks/: base.py  hierarchical.py  matrix.py  matrix_easy.py  rules.py
data/hierarchical/: canonical.json
data/matrix/: canonical.json
data/matrix_easy/: tasks.json
data/rules/: canonical.json
docs/superpowers/plans/: 2026-03-24-evaluation-framework.md
docs/superpowers/specs/: 2026-03-24-evaluation-framework-design.md
notebooks/: analysis.ipynb
results/smollm2_360m/hierarchical/few_shot/: 2026-03-24T18-11-24.816476Z.json
results/smollm2_360m/hierarchical/zero_shot/: 2026-03-24T18-11-24.263737Z.json
results/smollm2_360m/matrix/few_shot/: 2026-03-24T18-11-26.756631Z.json
results/smollm2_360m/matrix/zero_shot/: 2026-03-24T18-11-25.598855Z.json
results/smollm2_360m/rules/few_shot/: 2026-03-24T18-11-23.796165Z.json
results/smollm2_360m/rules/zero_shot/: 2026-03-24T18-11-23.275019Z.json
script/: run  test  test_fast
slurm/: eval_model.sh  submit.sh
tests/: test_base.py  test_cli.py  test_hierarchical.py  test_matrix.py  test_matrix_easy.py  test_model.py  test_rules.py  test_runner.py
