[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "baby-reasoning"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "tyro>=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-mock>=3.12",
    "responses>=0.25",
]
notebook = [
    "pandas>=2",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "nbformat>=5.9",
    "jupyter>=1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["baby_reasoning*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
